2005-06-12  Chad Fowler  <chad@chadfowler.com>
	* lib/rubygems.rb,lib/rubygems/installer.rb: Applied Mark Hubbart's
	patch to support MacOS framework.

2005-06-06  Chad Fowler  <chad@chadfowler.com>
	* lib/rubygems/specification.rb: Fixed Erik hatcher's reported bug
	of gem directories having "-" at the end of their names (e.g.
	"BlueCloth-1.0.0-".

2005-06-01  Jim Weirich  <jim@weirichhouse.org>

	* scripts/specdoc.rb (_resolve_links): Updated to generate hieraki
	format so it can be included in the docs.rubygems.org site.

	* test/test_specification.rb (TestSpecification::test_to_ruby):
	Fixed test on date that hard-coded a specific date.

2005-05-29  Jim Weirich  <jim@weirichhouse.org>

	* Changes from the Seattle Code fest: (1) Package list command
	(e.g. gem inspect GEM).  (2) .gemrc settings now allow cvsrc like
	options to set defaults per subcommand.  (3) The autorequire spec
	attribute will now accept a list.  (4) Binwrappers vs symlinks
	(more info to follow).  (5) Substituted Time for Date in specs,
	increasing performance dramatically in an important area.

2005-05-04  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems.rb (Gem::Exception::find_home): Changed rescue
	clause from Exception to StandardError.  Exception doesn't seem to
	catch everything ... I'm not sure I understand why.

2005-04-29  Chad Fowler <chad@chadfowler.com>
	* lib/rubygems/specifiation.rb: Marcel Molina's patch to discover
	which attributes in the spec are Array attributes.

2005-04-27  Chad Fowler <chad@chadfowler.com>
	* lib/rubygems/gem_commands.rb: -y is now a synonym for 
	--include-dependencies

2005-04-21  Chad Fowler <chad@chadfowler.com>
	* lib/rubygems/installer.rb: Added non-require_gem dependency check
	for installation.

2005-04-03  Chad Fowler <chad@chadfowler.com>

	* pre-install.rb: Added version check to RubyGems installation.

2005-03-25  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/rubygems_version.rb (Gem): Created release for
	0.8.10.
